funcionara la magia stattic man?

--- a/primerpost.html
+++ b/primerpost.html
@@ -310,6 +310,9 @@
 <p>Esto es lo que hemos elegido ser. </p>
 <p>Ahora, mata a la bestia. O muere intentándolo.</p>
 
+
+ {% include comments-new.html %}
+
             </div>
 
             <div class="col-e-4" style="padding-right:0px">
