añadido formulario a primerpost

--- a/primerpost.html
+++ b/primerpost.html
@@ -311,7 +311,16 @@
 <p>Ahora, mata a la bestia. O muere intentándolo.</p>
 
 
- {% include comments-new.html %}
+<form method="POST" action="https://api.staticman.net/v2/entry/jaimesemp/jaimesemp.github.io/master">
+  <input name="options[redirect]" type="hidden" value="https://jaimesemp.github.io">
+  <!-- e.g. "2016-01-02-this-is-a-post" -->
+  <input name="options[slug]" type="hidden" value="{{ page.slug }}">
+  <label><input name="fields[name]" type="text">Name</label>
+  <label><input name="fields[email]" type="email">E-mail</label>
+  <label><textarea name="fields[message]"></textarea>Message</label>
+  
+  <button type="submit">Go!</button>
+</form>
 
             </div>
 
