--- a/primerpost.html
+++ b/primerpost.html
@@ -311,7 +311,7 @@
 <p>Ahora, mata a la bestia. O muere intentándolo.</p>
 
 
-<form method="POST" action="https://api.staticman.net/v2/entry/jaimesemp/jaimesemp.github.io/master">
+<form method="POST" action="https://api.staticman.net/v2/entry/jaimesemp/jaimesemp.github.io/master/comments">
   <input name="options[redirect]" type="hidden" value="https://jaimesemp.github.io">
   <!-- e.g. "2016-01-02-this-is-a-post" -->
   <input name="options[slug]" type="hidden" value="{{ page.slug }}">
