--- a/segundopost2.html
+++ b/segundopost2.html
@@ -239,12 +239,12 @@
                 </a>
               </li>
               <li>
-                <a href="segundopost.html#">
+                <a href="segundopost2.html#">
                 Contacto
                 </a>
               </li>
               <li>
-                <a href="segundopost.html#">
+                <a href="segundopost2.html#">
                 Recursos aprobados
                 </a>
               </li>
@@ -363,9 +363,9 @@ Tu blog no es tu blog. Tu blog es una parte de ti. Una extensión de ti mismo. E
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="primerpost&#32;(copia).html">
-              <img class="related-post-thumbnail" src="static/images/posts/grizzley_opt.jpg" alt="">
-              <h6> Mata a la bestia o muere intentándolo </h6>
+            <a href="vive-y-soluciona-tus-problemas-como-alejandro-magno.html">
+              <img class="related-post-thumbnail" src="http://localhost:8004/static/images/posts//" alt="">
+              <h6> Vive y Soluciona Tus Problemas Como Alejandro Magno </h6>
             </a>
           </div>
         </li>
@@ -374,9 +374,9 @@ Tu blog no es tu blog. Tu blog es una parte de ti. Una extensión de ti mismo. E
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="blogging/segundopost2.html">
+            <a href="segundopost2.html">
               <img class="related-post-thumbnail" src="static/images/posts/empezarblog.jpg" alt="">
-              <h6> estoy dentro de una carpeta!! </h6>
+              <h6> Deja de leer consejos sobre cómo abrir un blog y lee esto. </h6>
             </a>
           </div>
         </li>
@@ -396,9 +396,9 @@ Tu blog no es tu blog. Tu blog es una parte de ti. Una extensión de ti mismo. E
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="segundopost2.html">
-              <img class="related-post-thumbnail" src="static/images/posts/empezarblog.jpg" alt="">
-              <h6> Deja de leer consejos sobre cómo abrir un blog y lee esto. </h6>
+            <a href="mata-a-la-bestia-o-muere-intentandolo.html">
+              <img class="related-post-thumbnail" src="static/images/posts/grizzley_opt.jpg" alt="">
+              <h6> Mata A La Bestia O Muere Intentándolo </h6>
             </a>
           </div>
         </li>
