--- a/primerpost (copia).html
+++ b/primerpost (copia).html
@@ -239,12 +239,12 @@
                 </a>
               </li>
               <li>
-                <a href="segundopost.html#">
+                <a href="primerpost&#32;(copia).html#">
                 Contacto
                 </a>
               </li>
               <li>
-                <a href="segundopost.html#">
+                <a href="primerpost&#32;(copia).html#">
                 Recursos aprobados
                 </a>
               </li>
@@ -291,69 +291,24 @@
 
 <div class="postTitleWithAuthor">
   <h1>
-    Deja de leer consejos sobre cómo abrir un blog y lee esto.
+    Mata a la bestia o muere intentándolo
   </h1>
   
-    <p>02 de Enero de 2010, por Jaime RockAndRoll</p>
+    <p>02 de Enero de 2011, por Jaime RockAndRoll</p>
   
 </div>
 
-  <img class="border-image cover-img" src="static/images/posts/empezarblog.jpg" alt="">
+  <img class="border-image cover-img" src="static/images/posts/grizzley_opt.jpg" alt="">
 
   <br/><br/>
 
-  <p>Malditos bloggers. Diciéndote cómo montar tu blog. Hablándote de wordpress, plugins, y vendiéndote el sueño de cómo conseguir tu libertad. Cómo seguir tu pasión</p>
-<p>Y se olvidan de empezar contándote lo más importante.</p>
-<p>Aquí te dejo los 3 pilares básicos por los que deberías de empezar a la hora de montar tu propio blog.</p>
-<p>Lo primero es que aclares tus engranajes internos, tu motivación e incluso tu estrategia interna. La filosofía interior que te mueve a lanzarte a algo tan jodido (parece fácil, eh?) antes de lanzarte a la aventura de montar un blog</p>
-<p>Todo lo demás, son temas técnicos que puedes encontrar en cualquier blog. Pero un blog es mucho más que aspectos técnicos.</p>
-<p>Un blog es todo psicología y emoción. Tanto internas (que te motiva, por qué lo haces... etc) como externas (las emociones que transmitirá tu blog y tus palabras).</p>
-<p>Sobre todo, no olvides nunca el punto 2.</p>
-<p>Punto 1. Demanda. Validación</p>
-<p>El punto más jodidamente importante. Antes de comprar un dominio, antes de escribir una maldita palabra.</p>
-<p>¿Estás seguro de que tienes demanda para tu blog? ¿Estás seguro de que hay gente buscando lo que ofreces?</p>
-<p>Si la respuesta no es un claro sí y sí, tira tu idea a la basura, o al menos intenta validarla antes de lanzarte a la piscina (escribiré un post sobre como validar una idea de negocio próximamente).</p>
-<p>Puede que te apasione hablar sobre la reproducción del ornitorrinco, pero si solo hay cuatro gatos en el mundo interesados en ella, ni se te ocurra abrir un blog sobre el tema.</p>
-<p>Mejorhombre.com es un blog sobre motivación y mejora personal. Hay miles de blogs, libros y demás material sobre ello. Hay una industria tras todo ello, eso prueba que ya hay un público, una demanda.</p>
-<p>Otra cosa es si un blog como este puede tener cabida en un mercado tan saturado (y a veces denostado). Para eso, lee el punto 2.</p>
-<p>Además, en el mundo anglosajón empieza a haber una tendencia creciente de blogs orientados a tíos exclusivamente. Normalmente las tendencias en EEUU acaban llegando y replicándose en el mundo hispano a los pocos años. Aprende a detectar dichas tendencias y aprovecharlas para ti.</p>
-<p>Así que mi idea de blog, de momento, está validada, tiene demanda.</p>
-<p>Punto 2. Tu voz. ¿Cómo vas a divertirte? ¿Cómo vas a ser único?</p>
-<p>Abrir un blog es fácil y rápido. Y ahí acaba lo fácil. Mantener un blog con un mínimo de calidad es duro, duro de cojones.</p>
-<p>Hay una cantidad de trabajo en las tripas de cualquier blog, que el lector medio ignora. Plugins, diseño, mantenimiento, escribir periódicamente... etc. Repito: es duro y no es para todos.</p>
-<p>Así que más vale que te diviertas con él. ¿Y cómo lo vas a hacer?</p>
-<p>EXPRESÁNDOTE</p>
-<p>Te haré una pregunta... ¿quién eres tú?</p>
-<p>Piensa en tu historia personal, en tus experiencias, en lo que arde dentro de ti. En tus miedos, tus fantasmas, tus fortalezas... Piensa en todo el conjunto de fotos e historias que llevas en tu interior.</p>
-<p>Ahora coge todo eso, y empapa tu blog de ello. Exprésate como nunca. Utilizalo para montar tu propio show.</p>
-<p>¿Cuáles son las mejores canciones que se escriben?</p>
-<p>Aquellas en las que el cantante consigue plasmar algo personal en ellas, algo real de sus experiencias vitales. Esas que van cargadas de autenticidad.</p>
-<p>Tu blog va a ser eso mismo, un reflejo de ti, una expresión de tu interior, tu escenario principal.</p>
-<p>Los seres humanos siempre hemos querido expresarnos. Gritar un "yo estoy aquí".</p>
-<p>Encontrando esa voz tuya propia, ese toque que nadie más que tú puede darle a tu blog (sea el tema que trates en él) conseguirás dos cosas:</p>
-<p>Divertirte.
-Crear posts auténticos y únicos.
-Tu blog no es tu blog. Tu blog es una parte de ti. Una extensión de ti mismo. Es tu patio de recreo y tu escenario. Úsalo a tu favor.</p>
-<p>La gente al final, no sigue a blogs, sigue a personas. Sigue a personas porque les gustan las historias que cuentan y como las cuentan.</p>
-<p>Solo tu puedes contar tus propias historias. Be real. Be different.</p>
-<p>Inspirate de quién quieras. Pero no copies a nadie. Solo tú puedes ser tú.</p>
-<p>Yo soy Jaime. El pequeño gran inadaptado. El misfit. Con mi punto de perdedor, flipado, peliculero y friki. Y uso todo ello en cada post. Es más, mejorhombre es el sitio de mejora personal para gente que se sienta igual. Para toda esa gente que este bloqueada, sintiéndose distinto o no tratándose todo lo bien que podrían y decirles en un susurro "despertad, otro mundo es posible".</p>
-<p>Todo ello hace además que mi blog sea único, personal y que tenga sentido. Hay muchos blogs y sitios de desarrollo personal, cargados de blablabla y de "haz esto y esto otro". Pero no hay ninguno como el mío. Punto.</p>
-<p>Este punto de distinción, de contarte todo a través de tu manera de ver el mundo, tus experiencias y desde lo más profundo de tus tripas es lo que te dará la autenticidad. Busca esa voz propia que le de sentido a todo.</p>
-<p>3.- Céntrate en ayudar. Construye algo único de lo que puedas estar orgulloso.</p>
-<p>Tu blog no va a ser sólo un blog. Va a ser un sitio del que vivir, dónde ganar dinero, va a ser tu negocio digital.</p>
-<p>Pero antes de todo eso, sienta esta idea base y grápate esta frase: tu blog es para ayudar a gente.</p>
-<p>Tu blog estará centrado en ayudar y en mejorar la vida de las personas. En proporcionar valor a sus vidas. Tanto en los artículos gratuitos como en los productos y servicios que vendas o promociones, tu finalidad será esa: aportar valor a sus vidas.</p>
-<p>Mejorhombre.com es mi legado. Es el sitio de autotransformación que quiero construir para cualquier pequeño misfit como yo. Es el sitio dónde uno aprende a tratarse realmente bien, a divertirse con la vida, a trabajar duro y a convertirse en su propio rockstar.</p>
-<p>Es un sitio dónde puedes mejorar varias áreas de tu vida. Dónde acabamos hablando de lo que significa ser hombre y estar en este planeta. Y de como crearnos una vida mejor y un mundo mejor. Sí, ambicioso y flipado. Pero no te pillaré de sorpresa ¿no?</p>
-<p>Ese es el sitio que estoy construyendo. Un sitio único tanto en contenidos como en diseño.</p>
-<p>Tu blog también debería ser único. Diferente. Deberías verlo cada día y sentirte orgulloso de él. Deberías pensar en él como tu legado, como tu obra de arte.</p>
-<p>El diseño de tu blog debería ser muy importante. Invierte en él todo lo que puedas y si puedes darle un toque distinto a lo habitual mejor que mejor.</p>
-<p>El diseño de mejorhombre.com no es algo que suelas ver por ahí. Ya llama la atención (por algo te quedaste, ¿no?), ya tiene un toque diferente a todo lo que sueles encontrar por ahí.</p>
-<p>El tener un diseño guapo tendrá otro efecto colateral: trabajarás más a gusto. Parece una chorrada pero es así. No es lo mismo el efecto de publicar un nuevo post si tu sitio tiene un look pésimo a que si tiene un diseño que lo parte.</p>
-<p>Un look cool te hará tener más ganas de pulsar en publicar ver como queda el último post. Te creará más conciencia de "estar construyendo algo".</p>
-<p>Construye algo. Deja un legado. Ayuda a la gente. Y cambia tu vida.</p>
-<p>Te toca. Échale cojones.</p>
+  <p>Hoy te levantaste al alba.</p>
+<p>Te preguntaste que estabas haciendo si era realmente lo que querías. Lo que deseabas.</p>
+<h1>Hoy no nos vamos a rendir.</h1>
+<p>Este es el camino que queremos seguir.</p>
+<p>Si coño, no nos detendremos.</p>
+<p>Ánimo no pararemos hasta que obtengamos lo que deseamos.</p>
+<h2>¿Qué vas a hacer con tu vida?</h2>
 
 
 
@@ -385,7 +340,7 @@ Tu blog no es tu blog. Tu blog es una parte de ti. Una extensión de ti mismo. E
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="segundopost.html">
+            <a href="segundopost2.html">
               <img class="related-post-thumbnail" src="static/images/posts/empezarblog.jpg" alt="">
               <h6> Deja de leer consejos sobre cómo abrir un blog y lee esto. </h6>
             </a>
@@ -396,9 +351,9 @@ Tu blog no es tu blog. Tu blog es una parte de ti. Una extensión de ti mismo. E
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="segundopost2.html">
-              <img class="related-post-thumbnail" src="static/images/posts/empezarblog.jpg" alt="">
-              <h6> Deja de leer consejos sobre cómo abrir un blog y lee esto. </h6>
+            <a href="mata-a-la-bestia-o-muere-intentandolo.html">
+              <img class="related-post-thumbnail" src="static/images/posts/grizzley_opt.jpg" alt="">
+              <h6> Mata A La Bestia O Muere Intentándolo </h6>
             </a>
           </div>
         </li>
