--- a/about-mejorhombre.html
+++ b/about-mejorhombre.html
@@ -360,7 +360,7 @@ position: absolute;
 <p>Por aquel entonces descubrí los blogs de <a href="http://boldanddetermined.com" target="_blank">Bold And Determined</a> y <a href="http://dangerandplay.com" target="_blank">Danger And Play</a>, blogs de motivación, de mejora personal, y de lo que se supone que es ser un hombre con propósito.</p>
 <p>Y me molaban. Coño, me motivaban de la ostia.</p>
 <p>Pero no, no fue ahí cuando decidí abrir este blog.</p>
-<p>Fue cuando me enteré en que trabajaba el, ahora novio, de la chica que más había querido. </p>
+<p>Fue cuando me enteré en que trabajaba él, el ahora novio, de la chica que más había querido. </p>
 <p>Había fundado una empresa tecnológica, y estaba ganando sus 3000 euros al mes.</p>
 <p>Mi puto sueño. </p>
 <p>Me había 'robado' a la chica y mi puto sueño de tener una empresa de tecnología.</p>
