--- a/about-mejorhombre.html
+++ b/about-mejorhombre.html
@@ -347,7 +347,7 @@ position: absolute;
 <p>Bienvenido.</p>
 <p>Mi nombre real es Jaime Sempere. Aunque a veces use el nick de Jaime RockAndRoll.</p>
 <p>¿Conoces esos 'sobre mi' en el que el autor del blog empieza a contarte 'me gusta hacer ganchillo y jugar al rabino?</p>
-<p><strong>Este no va a ser uno de esos.</strong></p>
+<p><strong>Este no va a ser uno de esos</strong></p>
 <p>2016 fue el peor año de mi vida. </p>
 <p>Perdí a una chica. </p>
 <p>Ni siquiera eramos novios, e íbamos y volvíamos, pero era la chica que más he querido nunca en mi vida. Y al final, en una de esas y venidas, ya no volvió. Se quedó con otro.</p>
@@ -363,10 +363,10 @@ position: absolute;
 <p>Fue cuando me enteré en que trabajaba él, el ahora novio, de la chica que más había querido. </p>
 <p>Había fundado una empresa tecnológica, y estaba ganando sus 3000 euros al mes.</p>
 <p>Mi puto sueño. </p>
-<p>Me había 'robado' a la chica y mi puto sueño de tener una empresa de tecnología.</p>
+<p>Me había 'robado' a la chica y mi sueño de tener una empresa de tecnología.</p>
 <p>Para más INRI, en la puerta de mi salón había un cartel que leía todas las mañanas antes de salir de casa:</p>
 <p><strong>Tienes que hacer algo con tu vida. Tienes que dejar un legado</strong></p>
-<p>A la mierda. Era hora de volverse loco.</p>
+<h2>A la mierda. Era hora de volverse loco.</h2>
 <p>Empezaría construyendo un blog.</p>
 <p>Un blog de motivación como los de Danger And Play, Bold And Determined y en menor medida, <a href="http://goodlookinglooser.com">Good Looking Looser</a></p>
 <p>El mundo hispanohablante necesitaba más blogs así.</p>
