--- a/life/la-gran-mentira-del-desarrollo-personal-y-el-por-que-te-la-crees.html
+++ b/life/la-gran-mentira-del-desarrollo-personal-y-el-por-que-te-la-crees.html
@@ -391,9 +391,9 @@ Y para ello lees mejorhombre. Compartimos nuestra historia, ideas y experiencias
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="../blogging/deja-de-leer-consejos-sobre-como-abrir-un-blog-y-lee-esto.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/empezarblog.jpg" alt="">
-              <h6> Deja De Leer Consejos Sobre Cómo Abrir Un Blog Y Lee Esto </h6>
+            <a href="../motivacion/que-hacer-cuando-estas-deprimido.html">
+              <img class="related-post-thumbnail" src="../static/images/posts/deprimido2.jpg" alt="">
+              <h6> Qué Hacer Cuando Estás Deprimido </h6>
             </a>
           </div>
         </li>
@@ -402,9 +402,20 @@ Y para ello lees mejorhombre. Compartimos nuestra historia, ideas y experiencias
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="../superpoderes/guia-definitiva-sobre-duchas-frias.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/Spartans-Rain.jpg" alt="">
-              <h6> Guía Definitiva Sobre Duchas Frías </h6>
+            <a href="../sex-and-girls/como-superar-una-ruptura.html">
+              <img class="related-post-thumbnail" src="../static/images/posts/lonley_opt.jpg" alt="">
+              <h6> Cómo Superar Una Ruptura </h6>
+            </a>
+          </div>
+        </li>
+      </ul>
+      
+      <ul>
+        <li>
+          <div class="relatedthumb">
+            <a href="../superpoderes/como-vencer-cualquier-miedo.html">
+              <img class="related-post-thumbnail" src="../static/images/posts/bestiaMiedo_opt.jpg" alt="">
+              <h6> Cómo vencer cualquier miedo </h6>
             </a>
           </div>
         </li>
@@ -427,17 +438,6 @@ Y para ello lees mejorhombre. Compartimos nuestra historia, ideas y experiencias
             <a href="../superpoderes/lenguaje-corporal-alfa---aumenta-tu-testosterona.html">
               <img class="related-post-thumbnail" src="../static/images/posts/jamesBondLenguajeCorporal.jpg" alt="">
               <h6> Lenguaje Corporal Alfa - Aumenta Tu Testosterona </h6>
-            </a>
-          </div>
-        </li>
-      </ul>
-      
-      <ul>
-        <li>
-          <div class="relatedthumb">
-            <a href="../sex-and-girls/como-superar-una-ruptura.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/lonley_opt.jpg" alt="">
-              <h6> Cómo Superar Una Ruptura </h6>
             </a>
           </div>
         </li>
