--- a/sex-and-girls/¿quieres-poder-hablar-con-cualquier-desconocida?-lee-esto..html
+++ b/sex-and-girls/¿quieres-poder-hablar-con-cualquier-desconocida?-lee-esto..html
@@ -410,9 +410,9 @@ Fallas el 100% de los disparos que no haces (Neil Strauss)
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="../superpoderes/lenguaje-corporal-alfa---aumenta-tu-testosterona.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/jamesBondLenguajeCorporal.jpg" alt="">
-              <h6> Lenguaje Corporal Alfa - Aumenta Tu Testosterona </h6>
+            <a href="../life/la-gran-mentira-del-desarrollo-personal-y-el-por-que-te-la-crees.html">
+              <img class="related-post-thumbnail" src="../static/images/posts/lagranmentira.jpg" alt="">
+              <h6> La Gran Mentira Del Desarrollo Personal Y El Por Qué Te La Crees </h6>
             </a>
           </div>
         </li>
@@ -421,9 +421,9 @@ Fallas el 100% de los disparos que no haces (Neil Strauss)
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="../motivacion/que-hacer-cuando-estas-deprimido.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/deprimido2.jpg" alt="">
-              <h6> Qué Hacer Cuando Estás Deprimido </h6>
+            <a href="¿quieres-poder-hablar-con-cualquier-desconocida%3F-lee-esto..html">
+              <img class="related-post-thumbnail" src="../static/images/posts/chicaPlaya.jpg" alt="">
+              <h6> ¿Quieres Poder Hablar Con Cualquier Desconocida? Lee Esto. </h6>
             </a>
           </div>
         </li>
@@ -432,9 +432,9 @@ Fallas el 100% de los disparos que no haces (Neil Strauss)
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="../superpoderes/¿hasta-los-cojones-de-todo%3F-cambia-tu-vida-levantandote-a-las-5.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/mañanasMilagrosas.jpg" alt="">
-              <h6> ¿Hasta Los Cojones De Todo? Cambia Tu Vida Levantándote a Las 5 </h6>
+            <a href="../blogging/deja-de-leer-consejos-sobre-como-abrir-un-blog-y-lee-esto.html">
+              <img class="related-post-thumbnail" src="../static/images/posts/empezarblog.jpg" alt="">
+              <h6> Deja De Leer Consejos Sobre Cómo Abrir Un Blog Y Lee Esto </h6>
             </a>
           </div>
         </li>
@@ -443,20 +443,9 @@ Fallas el 100% de los disparos que no haces (Neil Strauss)
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="../superpoderes/guia-definitiva-sobre-duchas-frias.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/Spartans-Rain.jpg" alt="">
-              <h6> Guía Definitiva Sobre Duchas Frías </h6>
-            </a>
-          </div>
-        </li>
-      </ul>
-      
-      <ul>
-        <li>
-          <div class="relatedthumb">
-            <a href="../superpoderes/como-hablar-claro-directo-y-relajado.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/lionroaring.jpg" alt="">
-              <h6> Cómo Hablar Claro Directo Y Relajado </h6>
+            <a href="../superpoderes/como-vencer-cualquier-miedo.html">
+              <img class="related-post-thumbnail" src="../static/images/posts/bestiaMiedo_opt.jpg" alt="">
+              <h6> Cómo vencer cualquier miedo </h6>
             </a>
           </div>
         </li>
@@ -468,6 +457,17 @@ Fallas el 100% de los disparos que no haces (Neil Strauss)
             <a href="como-superar-una-ruptura.html">
               <img class="related-post-thumbnail" src="../static/images/posts/lonley_opt.jpg" alt="">
               <h6> Cómo Superar Una Ruptura </h6>
+            </a>
+          </div>
+        </li>
+      </ul>
+      
+      <ul>
+        <li>
+          <div class="relatedthumb">
+            <a href="../fitness/¿deprimido%3F-hora-de-levantar-pesas.html">
+              <img class="related-post-thumbnail" src="../static/images/posts/planet-fitness-deadlift.jpg" alt="">
+              <h6> ¿Deprimido? Hora De Levantar Pesas </h6>
             </a>
           </div>
         </li>
