--- a/superpoderes/¿hasta-los-cojones-de-todo?-cambia-tu-vida-levantandote-a-las-5.html
+++ b/superpoderes/¿hasta-los-cojones-de-todo?-cambia-tu-vida-levantandote-a-las-5.html
@@ -441,20 +441,9 @@ El ahora importa mucho más que cualquier otro momento de tu vida</p>
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="../sex-and-girls/como-superar-una-ruptura.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/lonley_opt.jpg" alt="">
-              <h6> Cómo Superar Una Ruptura </h6>
-            </a>
-          </div>
-        </li>
-      </ul>
-      
-      <ul>
-        <li>
-          <div class="relatedthumb">
-            <a href="como-hablar-claro-directo-y-relajado.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/lionroaring.jpg" alt="">
-              <h6> Cómo Hablar Claro Directo Y Relajado </h6>
+            <a href="../motivacion/mata-a-la-bestia-o-muere-intentandolo.html">
+              <img class="related-post-thumbnail" src="../static/images/posts/grizzley_opt.jpg" alt="">
+              <h6> Mata A La Bestia O Muere Intentándolo </h6>
             </a>
           </div>
         </li>
@@ -474,9 +463,9 @@ El ahora importa mucho más que cualquier otro momento de tu vida</p>
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="../blogging/deja-de-leer-consejos-sobre-como-abrir-un-blog-y-lee-esto.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/empezarblog.jpg" alt="">
-              <h6> Deja De Leer Consejos Sobre Cómo Abrir Un Blog Y Lee Esto </h6>
+            <a href="guia-definitiva-sobre-duchas-frias.html">
+              <img class="related-post-thumbnail" src="../static/images/posts/Spartans-Rain.jpg" alt="">
+              <h6> Guía Definitiva Sobre Duchas Frías </h6>
             </a>
           </div>
         </li>
@@ -485,9 +474,20 @@ El ahora importa mucho más que cualquier otro momento de tu vida</p>
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="../motivacion/mata-a-la-bestia-o-muere-intentandolo.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/grizzley_opt.jpg" alt="">
-              <h6> Mata A La Bestia O Muere Intentándolo </h6>
+            <a href="../fitness/¿deprimido%3F-hora-de-levantar-pesas.html">
+              <img class="related-post-thumbnail" src="../static/images/posts/planet-fitness-deadlift.jpg" alt="">
+              <h6> ¿Deprimido? Hora De Levantar Pesas </h6>
+            </a>
+          </div>
+        </li>
+      </ul>
+      
+      <ul>
+        <li>
+          <div class="relatedthumb">
+            <a href="../blogging/deja-de-leer-consejos-sobre-como-abrir-un-blog-y-lee-esto.html">
+              <img class="related-post-thumbnail" src="../static/images/posts/empezarblog.jpg" alt="">
+              <h6> Deja De Leer Consejos Sobre Cómo Abrir Un Blog Y Lee Esto </h6>
             </a>
           </div>
         </li>
