--- a/contacto.html
+++ b/contacto.html
@@ -358,9 +358,9 @@ position: absolute;
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="superpoderes/¿hasta-los-cojones-de-todo%3F-cambia-tu-vida-levantandote-a-las-5.html">
-              <img class="related-post-thumbnail" src="static/images/posts/mañanasMilagrosas.jpg" alt="">
-              <h6> ¿Hasta Los Cojones De Todo? Cambia Tu Vida Levantándote a Las 5 </h6>
+            <a href="sex-and-girls/¿quieres-poder-hablar-con-cualquier-desconocida%3F-lee-esto..html">
+              <img class="related-post-thumbnail" src="static/images/posts/chicaPlaya.jpg" alt="">
+              <h6> ¿Quieres Poder Hablar Con Cualquier Desconocida? Lee Esto. </h6>
             </a>
           </div>
         </li>
@@ -380,20 +380,9 @@ position: absolute;
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="superpoderes/como-vencer-cualquier-miedo.html">
-              <img class="related-post-thumbnail" src="static/images/posts/bestiaMiedo_opt.jpg" alt="">
-              <h6> Cómo vencer cualquier miedo </h6>
-            </a>
-          </div>
-        </li>
-      </ul>
-      
-      <ul>
-        <li>
-          <div class="relatedthumb">
-            <a href="sex-and-girls/¿quieres-poder-hablar-con-cualquier-desconocida%3F-lee-esto..html">
-              <img class="related-post-thumbnail" src="static/images/posts/chicaPlaya.jpg" alt="">
-              <h6> ¿Quieres Poder Hablar Con Cualquier Desconocida? Lee Esto. </h6>
+            <a href="superpoderes/como-hablar-claro-directo-y-relajado.html">
+              <img class="related-post-thumbnail" src="static/images/posts/lionroaring.jpg" alt="">
+              <h6> Cómo Hablar Claro Directo Y Relajado </h6>
             </a>
           </div>
         </li>
@@ -413,9 +402,20 @@ position: absolute;
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="fitness/¿deprimido%3F-hora-de-levantar-pesas.html">
-              <img class="related-post-thumbnail" src="static/images/posts/planet-fitness-deadlift.jpg" alt="">
-              <h6> ¿Deprimido? Hora De Levantar Pesas </h6>
+            <a href="blogging/deja-de-leer-consejos-sobre-como-abrir-un-blog-y-lee-esto.html">
+              <img class="related-post-thumbnail" src="static/images/posts/empezarblog.jpg" alt="">
+              <h6> Deja De Leer Consejos Sobre Cómo Abrir Un Blog Y Lee Esto </h6>
+            </a>
+          </div>
+        </li>
+      </ul>
+      
+      <ul>
+        <li>
+          <div class="relatedthumb">
+            <a href="superpoderes/como-vencer-cualquier-miedo.html">
+              <img class="related-post-thumbnail" src="static/images/posts/bestiaMiedo_opt.jpg" alt="">
+              <h6> Cómo vencer cualquier miedo </h6>
             </a>
           </div>
         </li>
