--- a/sex-and-girls/como-vencer-la-ansiedad-sexual.html
+++ b/sex-and-girls/como-vencer-la-ansiedad-sexual.html
@@ -432,9 +432,9 @@ position: absolute;
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="../blogging/deja-de-leer-consejos-sobre-como-abrir-un-blog-y-lee-esto.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/empezarblog.jpg" alt="">
-              <h6> Deja De Leer Consejos Sobre Cómo Abrir Un Blog Y Lee Esto </h6>
+            <a href="como-vencer-la-ansiedad-sexual.html">
+              <img class="related-post-thumbnail" src="../static/images/posts/sexyGirlBed_opt.jpg" alt="">
+              <h6> Cómo Vencer La Ansiedad Sexual </h6>
             </a>
           </div>
         </li>
@@ -443,9 +443,9 @@ position: absolute;
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="¿quieres-poder-hablar-con-cualquier-desconocida%3F-lee-esto..html">
-              <img class="related-post-thumbnail" src="../static/images/posts/chicaPlaya.jpg" alt="">
-              <h6> ¿Quieres Poder Hablar Con Cualquier Desconocida? Lee Esto. </h6>
+            <a href="../superpoderes/como-hablar-claro-directo-y-relajado.html">
+              <img class="related-post-thumbnail" src="../static/images/posts/lionroaring.jpg" alt="">
+              <h6> Cómo Hablar Claro Directo Y Relajado </h6>
             </a>
           </div>
         </li>
@@ -454,20 +454,9 @@ position: absolute;
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="../motivacion/mata-a-la-bestia-o-muere-intentandolo.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/grizzley_opt.jpg" alt="">
-              <h6> Mata A La Bestia O Muere Intentándolo </h6>
-            </a>
-          </div>
-        </li>
-      </ul>
-      
-      <ul>
-        <li>
-          <div class="relatedthumb">
-            <a href="como-superar-una-ruptura.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/lonley_opt.jpg" alt="">
-              <h6> Cómo Superar Una Ruptura </h6>
+            <a href="../superpoderes/guia-definitiva-sobre-duchas-frias.html">
+              <img class="related-post-thumbnail" src="../static/images/posts/Spartans-Rain.jpg" alt="">
+              <h6> Guía Definitiva Sobre Duchas Frías </h6>
             </a>
           </div>
         </li>
@@ -487,9 +476,20 @@ position: absolute;
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="../superpoderes/¿hasta-los-cojones-de-todo%3F-cambia-tu-vida-levantandote-a-las-5.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/mañanasMilagrosas.jpg" alt="">
-              <h6> ¿Hasta Los Cojones De Todo? Cambia Tu Vida Levantándote a Las 5 </h6>
+            <a href="../superpoderes/como-vencer-cualquier-miedo.html">
+              <img class="related-post-thumbnail" src="../static/images/posts/bestiaMiedo_opt.jpg" alt="">
+              <h6> Cómo vencer cualquier miedo </h6>
+            </a>
+          </div>
+        </li>
+      </ul>
+      
+      <ul>
+        <li>
+          <div class="relatedthumb">
+            <a href="¿quieres-poder-hablar-con-cualquier-desconocida%3F-lee-esto..html">
+              <img class="related-post-thumbnail" src="../static/images/posts/chicaPlaya.jpg" alt="">
+              <h6> ¿Quieres Poder Hablar Con Cualquier Desconocida? Lee Esto. </h6>
             </a>
           </div>
         </li>
