--- a/superpoderes/como-vencer-cualquier-miedo.html
+++ b/superpoderes/como-vencer-cualquier-miedo.html
@@ -413,9 +413,9 @@ Y la segunda, y la tercera... y siempre.</p>
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="../sex-and-girls/¿quieres-poder-hablar-con-cualquier-desconocida%3F-lee-esto..html">
-              <img class="related-post-thumbnail" src="../static/images/posts/chicaPlaya.jpg" alt="">
-              <h6> ¿Quieres Poder Hablar Con Cualquier Desconocida? Lee Esto. </h6>
+            <a href="como-vencer-cualquier-miedo.html">
+              <img class="related-post-thumbnail" src="../static/images/posts/bestiaMiedo_opt.jpg" alt="">
+              <h6> Cómo vencer cualquier miedo </h6>
             </a>
           </div>
         </li>
@@ -424,9 +424,9 @@ Y la segunda, y la tercera... y siempre.</p>
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="../motivacion/que-hacer-cuando-estas-deprimido.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/deprimido2.jpg" alt="">
-              <h6> Qué Hacer Cuando Estás Deprimido </h6>
+            <a href="../sex-and-girls/como-superar-una-ruptura.html">
+              <img class="related-post-thumbnail" src="../static/images/posts/lonley_opt.jpg" alt="">
+              <h6> Cómo Superar Una Ruptura </h6>
             </a>
           </div>
         </li>
@@ -435,9 +435,9 @@ Y la segunda, y la tercera... y siempre.</p>
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="como-hablar-claro-directo-y-relajado.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/lionroaring.jpg" alt="">
-              <h6> Cómo Hablar Claro Directo Y Relajado </h6>
+            <a href="../fitness/¿deprimido%3F-hora-de-levantar-pesas.html">
+              <img class="related-post-thumbnail" src="../static/images/posts/planet-fitness-deadlift.jpg" alt="">
+              <h6> ¿Deprimido? Hora De Levantar Pesas </h6>
             </a>
           </div>
         </li>
@@ -457,9 +457,9 @@ Y la segunda, y la tercera... y siempre.</p>
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="../blogging/deja-de-leer-consejos-sobre-como-abrir-un-blog-y-lee-esto.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/empezarblog.jpg" alt="">
-              <h6> Deja De Leer Consejos Sobre Cómo Abrir Un Blog Y Lee Esto </h6>
+            <a href="../sex-and-girls/¿quieres-poder-hablar-con-cualquier-desconocida%3F-lee-esto..html">
+              <img class="related-post-thumbnail" src="../static/images/posts/chicaPlaya.jpg" alt="">
+              <h6> ¿Quieres Poder Hablar Con Cualquier Desconocida? Lee Esto. </h6>
             </a>
           </div>
         </li>
@@ -468,9 +468,9 @@ Y la segunda, y la tercera... y siempre.</p>
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="como-vencer-cualquier-miedo.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/bestiaMiedo_opt.jpg" alt="">
-              <h6> Cómo vencer cualquier miedo </h6>
+            <a href="../life/la-gran-mentira-del-desarrollo-personal-y-el-por-que-te-la-crees.html">
+              <img class="related-post-thumbnail" src="../static/images/posts/lagranmentira.jpg" alt="">
+              <h6> La Gran Mentira Del Desarrollo Personal Y El Por Qué Te La Crees </h6>
             </a>
           </div>
         </li>
