--- a/superpoderes/lenguaje-corporal-alfa---aumenta-tu-testosterona.html
+++ b/superpoderes/lenguaje-corporal-alfa---aumenta-tu-testosterona.html
@@ -447,20 +447,9 @@ Puedes encogerte, mirar al suelo, <strong>cruzarte de brazos</strong>; protegert
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="../sex-and-girls/como-superar-una-ruptura.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/lonley_opt.jpg" alt="">
-              <h6> Cómo Superar Una Ruptura </h6>
-            </a>
-          </div>
-        </li>
-      </ul>
-      
-      <ul>
-        <li>
-          <div class="relatedthumb">
-            <a href="../blogging/deja-de-leer-consejos-sobre-como-abrir-un-blog-y-lee-esto.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/empezarblog.jpg" alt="">
-              <h6> Deja De Leer Consejos Sobre Cómo Abrir Un Blog Y Lee Esto </h6>
+            <a href="../fitness/¿deprimido%3F-hora-de-levantar-pesas.html">
+              <img class="related-post-thumbnail" src="../static/images/posts/planet-fitness-deadlift.jpg" alt="">
+              <h6> ¿Deprimido? Hora De Levantar Pesas </h6>
             </a>
           </div>
         </li>
@@ -480,9 +469,20 @@ Puedes encogerte, mirar al suelo, <strong>cruzarte de brazos</strong>; protegert
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="../life/la-gran-mentira-del-desarrollo-personal-y-el-por-que-te-la-crees.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/lagranmentira.jpg" alt="">
-              <h6> La Gran Mentira Del Desarrollo Personal Y El Por Qué Te La Crees </h6>
+            <a href="../sex-and-girls/como-superar-una-ruptura.html">
+              <img class="related-post-thumbnail" src="../static/images/posts/lonley_opt.jpg" alt="">
+              <h6> Cómo Superar Una Ruptura </h6>
+            </a>
+          </div>
+        </li>
+      </ul>
+      
+      <ul>
+        <li>
+          <div class="relatedthumb">
+            <a href="lenguaje-corporal-alfa---aumenta-tu-testosterona.html">
+              <img class="related-post-thumbnail" src="../static/images/posts/jamesBondLenguajeCorporal.jpg" alt="">
+              <h6> Lenguaje Corporal Alfa - Aumenta Tu Testosterona </h6>
             </a>
           </div>
         </li>
@@ -502,9 +502,9 @@ Puedes encogerte, mirar al suelo, <strong>cruzarte de brazos</strong>; protegert
       <ul>
         <li>
           <div class="relatedthumb">
-            <a href="lenguaje-corporal-alfa---aumenta-tu-testosterona.html">
-              <img class="related-post-thumbnail" src="../static/images/posts/jamesBondLenguajeCorporal.jpg" alt="">
-              <h6> Lenguaje Corporal Alfa - Aumenta Tu Testosterona </h6>
+            <a href="../sex-and-girls/¿quieres-poder-hablar-con-cualquier-desconocida%3F-lee-esto..html">
+              <img class="related-post-thumbnail" src="../static/images/posts/chicaPlaya.jpg" alt="">
+              <h6> ¿Quieres Poder Hablar Con Cualquier Desconocida? Lee Esto. </h6>
             </a>
           </div>
         </li>
