--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>Mejorhombre | Mejora personal con esteroides</title>
+    <title>Mishell | Post</title>
 <!-- Google Fonts -->
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,700">
 
@@ -182,16 +182,13 @@
                 <b>Estoy juntando a la banda</b><br/>  Hora de echarle cojones y sembrar tu nuevo futuro.
               </h3>
 
-                    <form style="max-width:500px; margin: auto" class="optinform"enctype="application/x-www-form-urlencoded" action="https://mejorhombre.ip-zone.com/ccm/subscribe/index/form/ue0pj0hhqj" method="post">
+                    <form style="max-width:500px; margin: auto" class="optinform"enctype="application/x-www-form-urlencoded" action="https://mejorhombre.ip-zone.com/ccm/subscribe/index/form/" method="post">
                     <fieldset>
-                      <input type="hidden" name="groups[]" value="1"></dd>
-                      <input style="width:100%" type="text" placeholder="Tu nombre" name="email" id="email" value=""></dd>
+                      <input type="hidden" name="groups[]" id="groups-1" value="1">default</label>
+                      <input style="width:100%" type="text" placeholder="Tu nombre" name="nombre" id="email" value=""></dd>
                       <input style="width:100%;" type="text" placeholder="Tu mejor email" name="email" id="email" value=""></dd>
                       <input class="rocksubmit button-primary" type="submit" name="submit" id="submit" value="APÚNTAME A LA BANDA">
                       </dd>
-                  <!--<span style="font-size:14px; font-family:Roboto; font-weight:100">-->
-                    <!--Toda tu vida Buscando Algo Más, es hora de:-->
-                  <!--</span>-->
                       <dt id="successUrl-label"> </dt>
  <dd id="successUrl-element">
  <input type="hidden" name="successUrl" value="http://mejorhombre.com/revisa-tu-correo" id="successUrl"></dd>
