--- a/blog.html
+++ b/blog.html
@@ -216,9 +216,6 @@
           
 
 <style>
-    .subtitle, .logotitle{
-      padding-left: 3%;
-    }
     .logotitle{
       margin-bottom:0;
       padding-top: 2%;
@@ -311,7 +308,7 @@
 
         <div class="menu">
           <div class="menubuttonswrapper">
-            <ul>
+            <ul style="padding:0">
               <li>
               
                 <a  href="blog.html">
