--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
                     <form style="max-width:500px; margin: auto" class="optinform"enctype="application/x-www-form-urlencoded" action="https://mejorhombre.ip-zone.com/ccm/subscribe/index/form/" method="post">
                       <input type="hidden" name="groups[]" id="groups-1" value="1"></label>
-                      <input style="width:100%" type="text" placeholder="Tu nombre" name="nombre" id="email" value=""></dd>
+                      <input style="width:100%" type="text" placeholder="Tu nombre" name="name" id="email" value=""></dd>
                       <input style="width:100%;" type="text" placeholder="Tu mejor email" name="email" id="email" value=""></dd>
                       <input class="rocksubmit button-primary" type="submit" name="submit" id="submit" value="APÚNTAME A LA BANDA">
                       </dd>
